complete get-verification-code endpoint, fix some bugs
