# backend/docs/swagger.json
@@ -43,6 +43,12 @@
                             "$ref": "#/definitions/apperr.AppError"
                         }
                     },
+                    "404": {
+                        "description": "Not Found. User with provided email is not signing up",
+                        "schema": {
+                            "$ref": "#/definitions/apperr.AppError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -173,7 +179,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK. user was verified",
+                        "description": "OK. User was verified",
                         "schema": {
                             "$ref": "#/definitions/v1.verifyCodeResponse"
                         }
@@ -185,7 +191,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized. user provided invalid verification code",
+                        "description": "Unauthorized. User provided invalid verification code",
                         "schema": {
                             "$ref": "#/definitions/apperr.AppError"
                         }
